@@ -30,6 +30,7 @@ sources = """
           properties_dialog.cc
           repeat_dialog.cc
           screen_dialog.cc
+          server_dialog.cc
           servers_list_dialog.cc
           subtitle_panel.cc
           timecode.cc
