@@ -1,3 +1,7 @@
+2013-11-14  Carl Hetherington  <cth@carlh.net>
+
+	* Add server configuration back in.
+
 2013-11-12  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.29 released.
